--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+  <meta name="description" content="Портфолио тату-мастера Валерии Кудрявцевой — графика, чистые линии, красные акценты. Фотографии работ, контакты, запись.">
+  <meta name="keywords" content="тату, tattoo, графика, Валерия Кудрявцева, Рязань, студия, Колись Веселись, линия, красный, портфолио">
+  <meta name="author" content="Валерия Кудрявцева">
+  <meta property="og:title" content="Валерия Кудрявцева — Тату Минимализм">
+  <meta property="og:description" content="Минимализм, линия, дыхание. Портфолио тату-мастера Валерии Кудрявцевой.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://vellarrose.github.io/portfolio/">
+  <meta property="og:image" content="https://vellarrose.github.io/portfolio/images/tattoo1.jpg">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Валерия Кудрявцева — Тату Минимализм</title>
@@ -174,3 +182,4 @@
 
 </body>
 </html>
+
