--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta name="description" content="Портфолио тату-мастера Валерии Кудрявцевой — графика, чистые линии, красные акценты. Фотографии работ, контакты, запись.">
   <meta name="keywords" content="тату, tattoo, графика, Валерия Кудрявцева, Рязань, студия, Колись Веселись, линия, красный, портфолио">
   <meta name="author" content="Валерия Кудрявцева">
-  <meta property="og:title" content="Валерия Кудрявцева — Тату Минимализм">
-  <meta property="og:description" content="Минимализм, линия, дыхание. Портфолио тату-мастера Валерии Кудрявцевой.">
+  <meta property="og:title" content="Валерия Кудрявцева — Тату Графика">
+  <meta property="og:description" content="Графика, линия, аниме. Портфолио тату-мастера Валерии Кудрявцевой.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://vellarrose.github.io/portfolio/">
-  <meta property="og:image" content="https://vellarrose.github.io/portfolio/images/tattoo1.jpg">
+  <meta property="og:image" content="https://github.com/vellarrose/portfolio/blob/main/images/tattoo1.jpg?raw=true">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Валерия Кудрявцева — Тату Минимализм</title>
+  <title>Валерия Кудрявцева — Тату ЖООПААА</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet"> <!-- Подключение шрифта -->
   <style>
     :root {
@@ -182,4 +182,5 @@
 
 </body>
 </html>
+
 
