--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <meta property="og:description" content="Графика, линия, аниме. Портфолио тату-мастера Валерии Кудрявцевой.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://vellarrose.github.io/portfolio/">
-  <meta property="og:image" content="https://github.com/vellarrose/portfolio/blob/main/images/tattoo1.jpg?raw=true">
+  <meta property="og:image" content="https://raw.githubusercontent.com/vellarrose/portfolio/main/images/tattoo1.jpg">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/твоёимя/portfolio/main/images/tattoo1.jpg">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Валерия Кудрявцева — Тату ЖООПААА</title>
@@ -182,5 +184,6 @@
 
 </body>
 </html>
+
 
 
